--- a/finai_contest/pipeline/original_scripts/gym_anytrading.ipynb
+++ b/finai_contest/pipeline/original_scripts/gym_anytrading.ipynb
@@ -29,7 +29,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "tags": []
       },
@@ -43,7 +43,7 @@
         "import gym_anytrading\n",
         "from gym_anytrading.envs import Actions\n",
         "\n",
-        "from stable_baselines3 import A2C,PPO\n"
+        "from stable_baselines3 import A2C\n"
       ]
     },
     {
@@ -117,7 +117,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "tags": []
       },
@@ -143,7 +143,7 @@
       ],
       "source": [
         "env_train.reset()\n",
-        "model = PPO('MlpPolicy', env_train, verbose=0)\n",
+        "model = A2C('MlpPolicy', env_train, verbose=0)\n",
         "model.learn(total_timesteps=1_00000)"
       ]
     },
